[project]
name = "hello"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.64",
    "boto3-stubs[sns]>=1.40.64",
    "dotenv>=0.9.9",
    "langchain>=1.0.3",
    "langchain-anthropic>=1.0.1",
    "langchain-aws>=1.0.0",
    "langchain-mcp-adapters>=0.1.12",
    "langchain-tavily>=0.2.12",
    "langgraph>=1.0.2",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "ruff>=0.14.3",
]
